--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,12 @@ script:
   - export DOCKER_CLI_EXPERIMENTAL=enabled
 # prepare qemu
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+
+# create new builder
+  - docker buildx create --name builder
+  - docker buildx use builder
+  - docker buildx inspect --bootstrap
+
 # if master branch, build image and push it
   - >
     if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
