--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,11 @@ script:
 # activate experimental docker feature
   - export DOCKER_CLI_EXPERIMENTAL=enabled
 # prepare qemu
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-
+- docker run --rm --privileged docker/binfmt:66f9012c56a8316f9244ffd7622d7c21c1f6f28d
 # create new builder
   - docker buildx create --name builder
   - docker buildx use builder
   - docker buildx inspect --bootstrap
-
 # if master branch, build image and push it
   - >
     if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
