--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 language: bash
 env:
-  - apache_version=2.4.41-r0
+  - apache_version=2.4.43-r0
 # install last docker version
 before_install:
   - sudo apt-get remove docker docker-engine docker.io containerd runc
@@ -22,12 +22,12 @@ script:
   - >
     if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
       docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
-      docker buildx build --platform linux/amd64,linux/arm/v6 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:latest --push .
-      docker buildx build --platform linux/amd64,linux/arm/v6 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:$apache_version --push .
+      docker buildx build --platform linux/amd64,linux/arm/v7 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:latest --push .
+      docker buildx build --platform linux/amd64,linux/arm/v7 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:$apache_version --push .
     fi
 # if develop branch, build image and load it
   - >
     if [ "$TRAVIS_BRANCH" == "develop" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-      docker buildx build --platform linux/amd64,linux/arm/v6 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:latest --load .
-      docker buildx build --platform linux/amd64,linux/arm/v6 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:$apache_version --load .
+      docker buildx build --platform linux/amd64,linux/arm/v7 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:latest .
+      docker buildx build --platform linux/amd64,linux/arm/v7 --build-arg apache_version=$apache_version -t dtroncy/rpi-apache:$apache_version .
     fi
